feat: Changed database to mongoDB and elasticsearch. Refactored microservice accordingly
- Introduced ProductResponse DTO for API responses with String product IDs.
- Updated ReserveStockItem and UpdateProductRequest to use String for product IDs.
- Refactored Product entity to extend ReactivePanacheMongoEntity for MongoDB integration.
- Created ProductDocument for Elasticsearch indexing and searching.
- Implemented IProductSearchRepository for Elasticsearch operations.
- Modified ProductRepository to handle String IDs and MongoDB operations.
- Enhanced ProductService to manage product creation, reading, updating, and searching with vendor information.
- Updated application configuration for MongoDB and Elasticsearch.
- Removed EntityNotFoundExceptionMapper as it's no longer needed.